[package]
name = "rushia"
version = "0.1.1"
authors = ["Yuki Okushi <huyuumi.dev@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A work-in-progress crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
